# text-rpg-game

./: .gitattributes  CMakeLists.txt  LICENSE
.github/workflows/: cmake-multi-platform.yml
cmake/: disable_ccache.cmake  sanitizers.cmake
resources/: CMakeLists.txt
src/: CMakeLists.txt  common.h  config.h.in  const.h  entity.h  errors.h  gamedef.h  graph.c  graph.h  laz_utils.h  main.c  queue.c  queue.h  room.h  utils.c  utils.h  view.c  view.h
src/clay/: clay.h  layout.c
src/list/: list.c  list.h  vector_base.h
src/obstack/: CMakeLists.txt  arena.c  arena.h
tests/: CMakeLists.txt  test_graph.c  test_queue.c
